callme/k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: callme-service
  labels:
    app: callme-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: callme-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callme-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: callme-service
  template:
    metadata:
      name: callme-service
      labels:
        app: callme-service
        version: v1
    spec:
      hostname: callme-service
      containers:
        - env:
            - name: POD_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
          image: kerimaksak/callme-service:1.0
          imagePullPolicy: IfNotPresent
          name: callme-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
