callme/k8s/istio-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: callme-service-destination
spec:
  host: callme-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  # COMMAND: Eğer burada subset tanımlarsak VirtualService içerisinde http>route>destination>subset tanımlamamız gerekir!!!
  # COMMAND: Eğer DestinationRule içerisinde subsets tanımlayıp, VirtualService içerisinde
  #   tanımlamazsak bize "belirtilen subset yoktur" diye hata verecektir.
  #subsets:
  #  - name: v1
  #    labels:
  #      version: v1
  #    trafficPolicy:
  #      loadBalancer:
  #        simple: RANDOM
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: callme-service-route
spec:
  hosts:
    - callme-service
  http:
    - route:
        - destination:
            host: callme-service
            #subset: v1
---
